// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds a card to the CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "category": "Consumable",
      "cost": Object {
        "kind": "Money",
        "value": 1,
      },
      "description": "Heal 1, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "gainedCardId": "",
          "kind": "Basic",
          "value": 1,
        },
        Object {
          "category": "Trash Self",
          "gainedCardId": "",
          "kind": "Basic",
          "value": 0,
        },
      ],
      "id": "mock-id",
      "isPlayed": false,
      "name": "Apple",
      "subcategories": Array [
        "Food",
      ],
    },
    Object {
      "category": "Consumable",
      "cost": Object {
        "kind": "Money",
        "value": 2,
      },
      "description": "Heal 2, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "gainedCardId": "",
          "kind": "Basic",
          "value": 2,
        },
        Object {
          "category": "Trash Self",
          "gainedCardId": "",
          "kind": "Basic",
          "value": 0,
        },
      ],
      "id": "mock-id-2",
      "isPlayed": false,
      "name": "Bread",
      "subcategories": Array [
        "Food",
      ],
    },
  ],
}
`;

exports[`creates a Card 1`] = `
Object {
  "category": "Consumable",
  "cost": Object {
    "kind": "Money",
    "value": 1,
  },
  "description": "Heal 1, Trash this card",
  "effects": Array [
    Object {
      "category": "Heal",
      "gainedCardId": "",
      "kind": "Basic",
      "value": 1,
    },
    Object {
      "category": "Trash Self",
      "gainedCardId": "",
      "kind": "Basic",
      "value": 0,
    },
  ],
  "id": "mock-id",
  "isPlayed": false,
  "name": "Apple",
  "subcategories": Array [
    "Food",
  ],
}
`;

exports[`creates a CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "category": "Consumable",
      "cost": Object {
        "kind": "Money",
        "value": 1,
      },
      "description": "Heal 1, Trash this card",
      "effects": Array [
        Object {
          "category": "Heal",
          "gainedCardId": "",
          "kind": "Basic",
          "value": 1,
        },
        Object {
          "category": "Trash Self",
          "gainedCardId": "",
          "kind": "Basic",
          "value": 0,
        },
      ],
      "id": "mock-id",
      "isPlayed": false,
      "name": "Apple",
      "subcategories": Array [
        "Food",
      ],
    },
  ],
}
`;

exports[`removes a card from the CardStack 1`] = `
Object {
  "cards": Array [],
}
`;
